force-app/main/default/objects/OrderItemSummary/fields/Declined_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Declined_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Declined Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>