force-app/main/default/objects/OrderItemSummary/fields/Fulfillment_Location__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Location__c</fullName>
    <label>Fulfillment_Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>